syntax = "proto3";

package micromova.proto;

import "audio.proto";
import "language.proto";

option java_multiple_files = true;
option java_package = "dev.safronau.micromova.proto";

// Represents a single translation for a phrase in a given language.
message Translation {
  Language language = 1;
  string text = 2;
}

// Represents a phrase, its translations and score.
message Phrase {
  // Unique phrase id.
  int64 id = 1  [jstype = JS_STRING];

  // Phrase text, transformed to remove excessive whitespace.
  string normalized_text = 2;

  // The source language for the phrase.
  Language source_language = 3;

  // Translations for the phrase.
  repeated Translation translation = 4;

  // Synthesized recording.
  repeated Recording recording = 5;

  // Not stored
  int32 star_score_millis = 6;

  int32 success_time_seconds = 7;

  int32 score = 8;

  bool is_discoverable = 9;

  int32 correct_answers_delta = 10;

  string example = 11;

  string comment = 12;
}

message RecentScores {
  int32 timestamp = 1;
  int32 score = 2;
}

message Collection {
  string name = 1;

  string user_id = 2;

  Language source_language = 3;

  Language translation_language = 4;

  int32 discover_points = 5;

  int32 current_discover_points = 6;

  repeated Phrase phrase = 7;

  bool is_discover_enabled = 8;

  repeated int32 recent_discover_phrase_event_time = 9;
  repeated RecentScores recent_score_event_time = 10;

  int32 version = 11;
}

message PhraseHeadline {
  int64 id = 1  [jstype = JS_STRING];
  string normalized_text = 2;
  int32 star_score_millis = 3;
  bool is_discoverable = 4;
}

message CollectionView {
  string name = 1;
  string user_id = 2;
  Language source_language = 3;
  Language translation_language = 4;
  int32 discover_points = 5;
  int32 current_discover_points = 6;
  bool is_discover_enabled = 7;
  repeated PhraseHeadline phrase = 8;
  int32 version = 9;
}
